--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="book-listing/style.css">
-	<script type="module" src="book-listing/index.js" defer></script>
+	<link rel="stylesheet" href="style.css">
+	<script type="module" src="index.js" defer></script>
 	<script src="https://cdn.tailwindcss.com"></script>
 	<title>Listing app</title>
 </head>
