--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<span id="loader" class="animate-bounce hidden">🧠</span>
 
-	<dialog class="loading w-1/2 h-4/5 mb-0 rounded-t-xl transition-transform translate-y-full">
+	<dialog class="loading h-4/5 w-[40rem] mb-0 rounded-t-xl transition-transform translate-y-full">
 		<button onclick="this.closest('dialog').classList.add('translate-y-full'); this.closest('dialog').close()">✖️</button>
 		<div id="content-details">
 			<img />
